<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SABNzbd Controller</string>
    <string name="empty_remote_listview">No profiles found! Click the button below to add a new one.</string>
    <string name="nickname_label">Nickname</string>
    <string name="nickname_hint">MyRemote</string>
    <string name="address_port_label">Address/Port</string>
    <string name="address_hint">localhost</string>
    <string name="port_hint">8081</string>
    <string name="apikey_hint">eef2fe131a6e6&#8230;</string>
    <string name="apikey_label">API Key</string>
    <string name="save_remote_button_text">Save</string>
    <string name="add_remote_button_text">Add Remote</string>
    <string name="qr_button_text">QR</string>
    <string name="empty_remote_queue">Your queue is empty. Start downloading!</string>
    <string name="empty_remote_history">Your history is empty!</string>
    <string name="divide"> / </string>
    <string name="connect_error">There was an error. Please check both your connection and your SABNzbd settings.</string>
    <string name="error_prefix">There was an error: </string>
    <string name="try_again">Try again</string>
    <string name="ok">OK</string>
    <string name="delete_success">Delete successful</string>
    <string name="generic_error">There was an error</string>
    <string name="pause_successful">Pause successful</string>
    <string name="remote_queue_timeleft">Time Left</string>
    <string name="remote_queu_speed">Speed</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="autorefresh_interval">Refresh Interval</string>
    
    <!-- NewRemoteFragment -->
    <string name="must_contain_char">Must contain characters</string>
    <string name="must_contain_dig">Must contain numbers</string>
    <string name="must_contain_char_no_space">Must contain characters &amp; no spaces</string>
    
    <!-- DetailsActivity -->
    <string name="queue_title">QUEUE</string>
    <string name="history_title">HISTORY</string>
</resources>