<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/new_remote_layout_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/nickname_hint"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_port_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/new_remote_layout_address_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:layout_weight="1.0"
                android:hint="@string/address_hint"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/new_remote_layout_port_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:layout_weight="1.0"
                android:hint="@string/port_hint"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apikey_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
		        <EditText
		            android:id="@+id/new_remote_layout_apikey_edit_text"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1.0"
		            android:inputType="text"
		            android:singleLine="true"
		            android:hint="@string/apikey_hint"
		            android:textColor="@color/black"/>
		
		        <Button
		            android:id="@+id/new_remote_layout_qr_button"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight=".2"
		            android:text="@string/qr_button_text"
		            android:textColor="@color/black"
		            android:onClick="launchQrScanner"/>
        </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>
        
        <Button
            android:id="@+id/new_remote_save_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_remote_button_text"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>