<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/new_remote_layout_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/nickname_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_port_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/new_remote_layout_address_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:layout_weight="1.0"
                android:hint="@string/address_hint"/>

            <EditText
                android:id="@+id/new_remote_layout_port_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:layout_weight="1.0"
                android:hint="@string/port_hint"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apikey_label"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/new_remote_layout_apikey_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/apikey_hint"/>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>
        
        <Button
            android:id="@+id/new_remote_save_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_remote_save_button" />

    </LinearLayout>

</ScrollView>